# icet_SQS

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  DEVELOPMENT.md  LICENSE  Makefile  POSCAR  PROJECT_REPORT.md  README.md  UPLOAD_GUIDE.md  pyproject.toml  requirements.txt  sqskit_modern.py
.github/workflows/: ci.yml
.sisyphus/drafts/: sqs-parameter-guide.md
src/: __init__.py  constants.py  logging_config.py  models.py  parser.py
src/cli/: modern_interactive.py
src/core/: __init__.py  build_clusterspace.py  generate_sqs_enum.py  generate_sqs_mc.py  validate_export.py  validate_quality.py
src/sqs_workflow/: __init__.py  constants.py  logging_config.py  models.py  parser.py
src/sqs_workflow/cli/: __init__.py  modern_interactive.py
src/sqs_workflow/core/: build_clusterspace.py  generate_sqs_enum.py  generate_sqs_mc.py  validate_export.py  validate_quality.py
src/sqs_workflow/utils/: quality_utils.py  template_generator.py
src/utils/: __init__.py  quality_utils.py  template_generator.py
tests/: conftest.py  test_cli.py  test_generality.py  test_workflow.py
