[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sqs-workflow"
version = "0.3.0"
description = "SQS (Special Quasirandom Structure) 生成工具 — 基于 icet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "soft-defoliation"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "icet>=3.2.0",
    "ase>=3.22.0",
    "numpy>=1.20.0",
    "rich>=13.0.0",
    "questionary>=1.10.0",
    "pydantic>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/soft-defoliation/icet_SQS"
Repository = "https://github.com/soft-defoliation/icet_SQS"
Changelog = "https://github.com/soft-defoliation/icet_SQS/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
viz = [
    "matplotlib>=3.3.0",
    "pymatgen>=2022.0.0",
]

[project.scripts]
sqskit = "sqs_workflow.cli.modern_interactive:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
